Added DbContext and Migrations

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "CommanderConnection": "Host=localhost; Database=CommanderDB; User ID=root; Password=root; Integrated Security=true; Pooling=true; "
     }
-  }
 }
